tests/profile/error/time/relative_missing_value.profile
{
  "version": { "major": 12, "minor": 13 },
  "time": {
    "type": "relative"
  }
}
